# mccr

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  gtester.make  index.html  ix01.html  libmccr-Core-library-operations.html  libmccr-Device-object.html  libmccr-Device-state.html  libmccr-Generic-device-commands.html  libmccr-Library-logging.html  libmccr-Library-version.html  libmccr-Swipe-reports.html  libmccr.devhelp2  pt01.html  pt02.html
doc/reference/: Makefile.am  libmccr-docs.xml  libmccr-sections.txt
examples/: Makefile.am  example-info.c  example-swipe.c
m4/: compiler-warnings.m4
src/: Makefile.am
src/common/: Makefile.am  common.c  common.h
src/libmccr/: Makefile.am  mccr-feature-report.c  mccr-feature-report.h  mccr-hid.c  mccr-hid.h  mccr-input-report.c  mccr-input-report.h  mccr-log.c  mccr-log.h  mccr-raw.c  mccr-raw.h  mccr-usb.c  mccr-usb.h  mccr.c  mccr.h  mccr.h.in  mccr.pc.in
src/mccr-cli/: Makefile.am  mccr-cli.c
src/mccr-gtk/: 99-mccr-hid.rules  Makefile.am  mccr-gtk.c  mccr-gtk.desktop  mui-app.c  mui-app.h  mui-gresource.xml  mui-menu.ui  mui-page-advanced.c  mui-page-advanced.h  mui-page-advanced.ui  mui-page-basic.c  mui-page-basic.h  mui-page-basic.ui  mui-page-remote-services.c  mui-page-remote-services.h  mui-page-remote-services.ui  mui-page.c  mui-page.h  mui-processor.c  mui-processor.h  mui-remote-service-utils.c  mui-remote-service-utils.h  mui-remote-service.c  mui-remote-service.h  mui-window.c  mui-window.h  mui-window.ui
src/mccr-gtk/test/: Makefile.am  get-command-by-ksn-response.xml  get-command-by-mut-response.xml  get-command-list-response.xml  get-key-list-response.xml  get-key-load-command-response.xml  test-remote-service-utils.c
