
noinst_PROGRAMS = \
	example-info  \
	example-swipe \
	$(NULL)

example_info_SOURCES = \
	example-info.c \
	$(NULL)
example_info_CPPFLAGS = \
	-I$(top_srcdir)/src/libmccr \
	$(NULL)
example_info_LDADD = \
	$(top_builddir)/src/libmccr/libmccr.la \
	$(NULL)

example_swipe_SOURCES = \
	example-swipe.c \
	$(NULL)
example_swipe_CPPFLAGS = \
	-I$(top_srcdir)/src/libmccr \
	$(NULL)
example_swipe_LDADD = \
	$(top_builddir)/src/libmccr/libmccr.la \
	$(NULL)
